# auto_everything

./: .Tools.sh.swp  .gitignore  LICENSE  README.md  README_For_Developers.md  Tools.py  Tools.sh  demo.py  env_setup.sh  environment.yml  hi.txt  install.sh  noise.prof  pyproject.toml  pyrightconfig.json  requirements.txt  rm.sh  setup.py  super_setup.py  temp.sh  to_raspberry_pi.sh  tool.sh
.github/: FUNDING.yml
auto/: .gitignore  CMakeLists.txt  build_and_test.sh  setup.py
auto/src/disk/: disk.cpp  disk.h
auto/src/terminal/: terminal.cpp
auto/tests/: test_disk.py  test_terminal.py
auto_everything/: .gitignore  .video.py.swp  Base.py  __init__.py  __main__.py  _command_line_interface.py  all.py  audio.py  base.py  camera.py  cryptography.py  database.py  develop.py  disk.py  files.py  font_.py  gui.py  http.py  http_.py  humanity.py  image.py  io.py  language.py  math.py  math_.py  ml.py  monitor.py  my_email.py  network.py  python.py  string.py  string_.py  terminal.py  test_base.py  time.py  video.py  wallet.py  web.py
auto_everything.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
auto_everything/base/: .__base.py.swp  __base.py  __init__.py  __loop.py
auto_everything/gui/: __gui.py  __init__.py
auto_everything/math/: __init__.py  __math.py
auto_everything/video/: .__video.py.swp  __init__.py  __video.py
auto_everything/web/: .__web.py.swp  __init__.py  __web.py
auto_everything/x11/: README.md  build.py  compile.sh  myx11.cpp  setup.py  test.py
auto_everything/yingshaoxo_python/: built_in_functions.py
demo/: .test.py.swp  additional_script_for_creating_a_service.py  complex_demo.py  count.py  create_a_service.py  hi.py  install_Golang.py  install_OpenCV.py  install_YouCompleteMe.py  log  nohup.out  simple_demo.py  temp.sh  test.py  web_demo.py
demo/camera/: 1.create_fake_camera.py  1.create_fake_camera_with_pornstar.py  README.md
demo/gui/: find_text.py  main.py
demo/service/: .1.swp  additional_script_for_creating_a_service.py  create_or_remove_a_service.py
demo/terminal/: Start.py  Tools.py  tools.py
demo/test/: hi.py  hi.sh  log  main.py
demo/video/: .hi.py.swp  Tools.py  basic.py  complicated.py  hi.py
docs/: Makefile  genindex.html  index.html  make.bat  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: index.rst.txt
docs/_static/: documentation_options.js
docs/doctrees/: environment.pickle  index.doctree
docs/html/: index.html
docs/source/: conf.py  index.rst
doctrees/: environment.pickle  index.doctree
example/: install_YouCompleteMe.py  install_all.py
example/audio/: concatenate_mp3_files_into_one.py
example/camera/: 2.show_fake_camera.py
example/database/: .gitignore  generated_python_database_class_example.py  generated_python_protobuff_class_example.py  simple_search.py  test_database.py
example/disk/: git_test.py  gitignore_test.py  to_hash.py
example/gui/: find_text.py
example/gui_operator/: find_text.py
example/http/: http_example.py
example/humanity/: friendships.ipynb
example/image/: .gitignore  README.md  gui_test.py  image_test.py  index.html  super_resolution.py  temp_font_parser.py  text_gui_test.py
example/language/: language_test.py
example/math/: test.ipynb
example/ml/: add_punctuation_automatically.py  code_complete.py  code_correction.py  context_based_chat.py  correct_punctuation.py  cpu_text_transformer.py  database_search.py  one_shot_chat.py  text_style_transfer.py  tinybert_based_context_based_chat.py  word_based_code_correction.py
example/monitor/: audio_monitor: check if no one speak.py  autoPauseOrResumeTheOBSrecording.py  (+1 more)
example/python/: fire2.py
outputs/: auto_everything.pyi  hi.py
playground/: _temp.ipynb  develop.ipynb  disk.ipynb  my_email.ipynb  temp.ipynb  video.ipynb
scientific_research/: get the concept of objects.ipynb
service/: .gitignore  Dockerfile_client  Dockerfile_service  README.md  docker-compose.yaml  environment.yml  main.py  pyproject.toml
service/py_backend/database/: sqlite.py
service/py_backend/routers/: autoPauseOrResumeTheOBSrecording.py  obs.py  test.py  video.py
service/py_backend/store/: globalVariables.py
service/py_backend/tools/: diskTool.py  networkTool.py  stringTool.py
service/web/: .eslintrc.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
service/web/src/: App.vue  main.ts  router.ts
service/web/src/components/: UploadWidget.vue
service/web/src/dialogs/FinalAgree/: index.vue
service/web/src/pages/: HomePage.vue  VideoPage.vue  VideoPlaygroundPage.vue
service/web/src/requests/: projects.ts
service/web/src/store/: functions.ts  memory.ts  router.ts
service/web/src/styles/: base.scss
tests/: test_audio.py  test_base.py  test_cryptography.py  test_database.py  test_develop.py  test_disk.py  test_my_email.py  test_network.py  test_python.py  test_terminal.py  test_time.py  test_video.py  test_web.py
(+123 files in other folders)
