[tool.poetry]
name = "auto-everything"
version = "3.13"
description = "do automate things on Linux/MacOS"
authors = ["yingshaoxo <yingshaoxo@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "auto_everything"}]

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^5.9.4"
librosa = "^0.9.2"
moviepy = "^1.0.3"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.13.0-cp310-none-macosx_11_0_arm64.whl"}
torchaudio = "^0.13.0"
speechbrain = "^0.5.13"
vosk = "^0.3.44"
pydub = "^0.25.1"
py-dateutil = "^2.2"
fire = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hi = "auto_everything.terminal:_hi"