[tool.poetry]
name = "auto-everything"
version = "3.23"
description = "do automate things on Linux"
authors = ["yingshaoxo <yingshaoxo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "auto_everything"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
psutil = "5.9.4"

[tool.poetry.group.all]
optional = true

[tool.poetry.group.all.dependencies]
pytest = "^7.2.0"
ipykernel = "^6.19.2"
librosa = "^0.9.2"
moviepy = "^1.0.3"
vosk = "^0.3.44"
pydub = "^0.25.1"
py-dateutil = "^2.2"
opencv-python = "^4.7.0.68"
pyautogui = "^0.9.53"
python-telegram-bot = "^20.2"
#torch = "^2.0.0" #{url = "https://download.pytorch.org/whl/cpu/torch-1.13.0-cp310-none-macosx_11_0_arm64.whl"}
#torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.13.0%2Bcpu-cp310-cp310-linux_x86_64.whl"}
#torch = {version = "^2.0.0+cpu", source = "pytorch-cpu"}
#torchaudio = "^0.13.0" 
#speechbrain = "^0.5.13"
#o365 = "^2.0.23"
#paddlepaddle = "^2.4.1"
web3 = "^6.1.0"
tronpy = "^0.4.0"

[tool.poetry.scripts]
hi = "auto_everything._command_line_interface:_hi" # You can call 'hi' in everywhere from your terminal after you install this package
auto_everything = "auto_everything._command_line_interface:main"

#[[tool.poetry.source]]
#name = "pytorch-cpu"
#url = "https://download.pytorch.org/whl/cpu"
#default = false
#secondary = true

